Modified counsellor page

--- a/src/app/components/author-profile/author-profile.component.html
+++ b/src/app/components/author-profile/author-profile.component.html
@@ -1,14 +1,13 @@
 <mat-card class="rightpanel-card mat-elevation-z2">
     <mat-card-content>
-        <h4 class="rightdivtext">
-            Counselling Support
-        </h4>
-    </mat-card-content>
-    <mat-card-content>
         <div class="authorimagecontainer">
-            <img class="authorimage" mat-card-avatar
-                src="../../../assets/images/1.jpg">
-            <h5>Jean Nee</h5>
+            <img class="authorimage" 
+                src="../../../assets/images/1.png">
+                <h4 class="centerdivtext">
+                    Nurul Fatihah Amir
+                </h4>
+            <h5>Counsellor (K.B,P.A)</h5>
+            <h5>Psychological & Counseling Services</h5>
         </div>
     </mat-card-content>
     <mat-divider></mat-divider>
@@ -18,90 +17,87 @@
         </h6>
     </mat-card-content>
     <mat-card-content>
-        <a href="mailto:lapsap@gmail.com" target="_blank"><i class="fa fa-envelope-square"
+        <a href="mailto:fatihah.amir@utp.edu.my" target="_blank"><i class="fa fa-envelope-square"
                 aria-hidden="true"></i></a>
-        <a href="https://wa.me/15551234567" target="_blank"><i class="fa fa-whatsapp"
+        <a href="https://wa.me/0168317075" target="_blank"><i class="fa fa-whatsapp"
                 aria-hidden="true"></i></a>
     </mat-card-content>
 </mat-card>
 
 <mat-card class="rightpanel-card mat-elevation-z2">
     <mat-card-content>
-        <h4 class="rightdivtext">
-            Counselling Support
-        </h4>
-    </mat-card-content>
-    <mat-card-content>
         <div class="authorimagecontainer">
-            <img class="authorimage" mat-card-avatar
-                src="../../../assets/images/2.jpg">
-            <h5>Jasmin Hassan</h5>
+            <img class="authorimage" 
+                src="../../../assets/images/2.png">
+                <h4 class="centerdivtext">
+                    Abdul Jalil Abdullah
+                </h4>
+            <h5>Counsellor (K.B,P.A)</h5>
+            <h5>Psychological & Counseling Services</h5>
         </div>
     </mat-card-content>
     <mat-divider></mat-divider>
     <mat-card-content>
         <h6 class="rightdivtext">
-            Contact Me
+            Contact me
         </h6>
     </mat-card-content>
     <mat-card-content>
-        <a href="mailto:lapsap@gmail.com" target="_blank"><i class="fa fa-envelope-square"
+        <a href="mailto:jalil_abdullah@utp.edu.my" target="_blank"><i class="fa fa-envelope-square"
                 aria-hidden="true"></i></a>
-        <a href="https://wa.me/15551234567" target="_blank"><i class="fa fa-whatsapp"
+        <a href="https://wa.me/0199591978" target="_blank"><i class="fa fa-whatsapp"
                 aria-hidden="true"></i></a>
     </mat-card-content>
 </mat-card>
 
 <mat-card class="rightpanel-card mat-elevation-z2">
     <mat-card-content>
-        <h4 class="rightdivtext">
-            Counselling Support
-        </h4>
-    </mat-card-content>
-    <mat-card-content>
         <div class="authorimagecontainer">
-            <img class="authorimage" mat-card-avatar
-                src="../../../assets/images/3.jpg">
-            <h5>Hariyani Harun</h5>
+            <img class="authorimage" 
+                src="../../../assets/images/3.png">
+                <h4 class="centerdivtext">
+                    Ting Jean Nee
+                </h4>
+            <h5>Counsellor (K.B,P.A)</h5>
+            <h5>Psychological & Counseling Services</h5>
         </div>
     </mat-card-content>
     <mat-divider></mat-divider>
     <mat-card-content>
         <h6 class="rightdivtext">
-            Contact Me
+            Contact me
         </h6>
     </mat-card-content>
     <mat-card-content>
-        <a href="mailto:lapsap@gmail.com" target="_blank"><i class="fa fa-envelope-square"
+        <a href="mailto:jeannee.ting@utp.edu.my" target="_blank"><i class="fa fa-envelope-square"
                 aria-hidden="true"></i></a>
-        <a href="https://wa.me/15551234567" target="_blank"><i class="fa fa-whatsapp"
+        <a href="https://wa.me/0162553435" target="_blank"><i class="fa fa-whatsapp"
                 aria-hidden="true"></i></a>
     </mat-card-content>
 </mat-card>
 
 <mat-card class="rightpanel-card mat-elevation-z2">
     <mat-card-content>
-        <h4 class="rightdivtext">
-            Counselling Support
-        </h4>
-    </mat-card-content>
-    <mat-card-content>
         <div class="authorimagecontainer">
-            <img class="authorimage" mat-card-avatar
+            <img class="authorimage" 
                 src="../../../assets/images/4.png">
-            <h5>Daniel Ong</h5>
+                <h4 class="centerdivtext">
+                    Azlina Binti Mohd Lazim
+                </h4>
+            <h5>Psychologist</h5>
+            <h5>Psychological & Counseling Services</h5>
         </div>
     </mat-card-content>
     <mat-divider></mat-divider>
     <mat-card-content>
         <h6 class="rightdivtext">
-            Contact Me
+            Contact me
         </h6>
     </mat-card-content>
     <mat-card-content>
-        <a href="mailto:lapsap@gmail.com" target="_blank"><i class="fa fa-envelope-square"
+        <a href="mailto:azlina.lazim@utp.edu.my" target="_blank"><i class="fa fa-envelope-square"
                 aria-hidden="true"></i></a>
-        <a href="https://wa.me/15551234567" target="_blank"><i class="fa fa-whatsapp"
+        <a href="https://wa.me/0139029029" target="_blank"><i class="fa fa-whatsapp"
                 aria-hidden="true"></i></a>
     </mat-card-content>
 </mat-card>
