--- a/src/app/components/post-card/post-card.component.html
+++ b/src/app/components/post-card/post-card.component.html
@@ -15,11 +15,10 @@
         <div [innerHTML]="post.content | excerpt"></div>
       </mat-card-content>
       <mat-divider></mat-divider>
-      <mat-card-actions align="end">
-        <ng-container *ngIf="appUser.isAdmin">
-          <!-- <button mat-raised-button color="accent" [routerLink]="['/editpost',post.postId]">Edit</button> -->
+      <mat-card-actions>
+        <!-- <ng-container *ngIf="appUser.isAdmin">
           <button mat-raised-button color="warn" (click)="delete(post.postId)">Delete</button>
-        </ng-container>
+        </ng-container> -->
         <span class="spacer"></span>
         <button mat-raised-button color="primary" [routerLink]="['/post/', post.postId, post.title | slug]">Read
           More</button>
