enabled image and video uploader in add post, installed dompurify

--- a/src/app/components/post-card/post-card.component.html
+++ b/src/app/components/post-card/post-card.component.html
@@ -12,7 +12,7 @@
         </a>
       </mat-card-content>
       <mat-card-content>
-        <div [innerHTML]="post.content | excerpt"></div>
+        <div [innerHTML]="post.content | slug"></div>
       </mat-card-content>
       <mat-divider></mat-divider>
       <mat-card-actions>
