Fix video not showing #2

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -6,7 +6,7 @@
   </mat-card-subtitle>
   <mat-divider></mat-divider>
   <div class="docs-example-viewer-body">
-    <div [innerHTML]="postData.content | noSanitize">
+    <div [innerHTML]="postContent | noSanitize">
     </div>
   </div>
 </div>
